--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-dist
-.project_env.rc
-.path_progress
-.rvmrc
-.ruby-version
-*.rbc
-koans/*
-*~
+# dist
+# .project_env.rc
+# .path_progress
+# .rvmrc
+# .ruby-version
+# *.rbc
+# koans/*
+# *~
